@@ -1,0 +1,7 @@
+<?php
+/**
+ * Custom English Lexicon Entries for Collections
+ *
+ * @package collections
+ * @subpackage lexicon
+ */
