@@ -25,6 +25,8 @@
         <field key="child_template" dbtype="int" attributes="unsigned" precision="10" phptype="integer" null="true" />
         <field key="child_resource_type" dbtype="varchar" precision="100" phptype="string" null="false" default="modDocument" />
         <field key="resource_type_selection" dbtype="int" precision="1" phptype="boolean" null="false" default="1" />
+        <field key="tab_label" dbtype="varchar" precision="255" phptype="string" null="false" default="collections.children" />
+        <field key="button_label" dbtype="varchar" precision="255" phptype="string" null="false" default="collections.children.create" />
 
         <aggregate alias="Setting" class="CollectionSetting" local="id" foreign="template" cardinality="one" owner="local" />
         <composite alias="Columns" class="CollectionTemplateColumn" local="id" foreign="template" cardinality="many" owner="local" />
